Initial commit: Added index.html

--- a/index.html
+++ b/index.html
@@ -155,10 +155,11 @@
 <body>
 
     <div id="content">
-        <h1>Happy Valentine's Day Mounika! ❤️</h1>
+        <h1>Happy Valentine's Day Maria! ❤️</h1>
         <p>
-            I hope you liked the flowers! I know I couldn't get you something expensive
-            but I promise I'll make it up to you soon! 😘 <br />
+            I'm so grateful to have you in my life. You're one of the best things that ever happened to me. I love you more than words can express. You mean a lot to me.
+            I know I'll not be there with you today, but I hope you are having a great valkentines day.
+            but I hope I'll make it up to you soon! 😘 <br />
         </p>
 
         <!-- Valentine's Question -->
@@ -171,7 +172,7 @@
 
     <!-- Thank You Message (Hidden Initially) -->
     <div id="thank-you-message" class="thank-you">
-        Thank you, Mounika! You made my day! 🎉❤️
+        I'm pretty sure you clicked yes out of curiosity and I did disappear the no button but lets pretend you clicked on yes for real! Can't wait to see you at dinner 🎉❤️
     </div>
 
     <script>
